--- a/1-novice/cough-syrup/pom.xml
+++ b/1-novice/cough-syrup/pom.xml
@@ -3,21 +3,17 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>suggs-katas-parent</artifactId>
+        <artifactId>suggs-katas-novice-parent</artifactId>
         <groupId>org.suggs.katas</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>suggs-katas-novice-parent</artifactId>
-    <packaging>pom</packaging>
-    <name>Suggs Katas Novice Parent</name>
-
-    <modules>
-        <module>cough-syrup</module>
-    </modules>
+    <artifactId>suggs-katas-novice-cough-syrup</artifactId>
+    <packaging>jar</packaging>
+    <name>Suggs Katas Novice Cough Syrup</name>
 
     <dependencies>
     </dependencies>
-
+  
 </project>
