Added roman numerals kata

--- a/3-competent/pom.xml
+++ b/3-competent/pom.xml
@@ -14,9 +14,7 @@
     <name>Suggs Katas Competent Parent</name>
 
     <modules>
-    <!--
-        <module>cough-syrup</module>
-    -->
+        <module>roman-numerals</module>
     </modules>
 
     <dependencies>
