--- a/1-novice/pom.xml
+++ b/1-novice/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <artifactId>suggs-katas-parent</artifactId>
@@ -9,12 +9,13 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>suggs-katas-competent-parent</artifactId>
+    <artifactId>suggs-katas-novice-parent</artifactId>
     <packaging>pom</packaging>
-    <name>Suggs Katas Competent Parent</name>
+    <name>Suggs Katas Novice Parent</name>
 
     <modules>
-        <module>roman-numerals</module>
+        <module>cough-syrup</module>
+        <module>fizz-buzz</module>
     </modules>
 
     <dependencies>
