--- a/1-novice/pom.xml
+++ b/1-novice/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>cough-syrup</module>
         <module>fizz-buzz</module>
+        <module>nasa-countdown</module>
     </modules>
 
     <dependencies>
