Created basic structure for tea party kata

--- a/1-novice/pom.xml
+++ b/1-novice/pom.xml
@@ -17,6 +17,7 @@
         <module>cough-syrup</module>
         <module>fizz-buzz</module>
         <module>nasa-countdown</module>
+        <module>tea-party</module>
     </modules>
 
     <dependencies>
